# hochwasser

./: .env.example  .env.prod.example  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  jobs.example.json  plan.md  pyproject.toml  requirements.txt
.github/workflows/: i18n.yml  ruff.yml
app/: __init__.py  config.py  email_content.py  email_templates.py  forecasting.py  http_json_client.py  i18n.py  job_scheduler.py  locale_utils.py  main.py  notifier.py  outbox_dispatcher.py  pegelonline.py  plotting.py  provider_client.py  runtime_health.py  state_store.py  station_cycle_data.py  station_data_cache.py  translator.py  watchdog.py  waterlevel_models.py
deploy/: Caddyfile
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
frontend/public/: sitemap.xml
frontend/scripts/: generate-seo-files.mjs
frontend/src/: main.ts  vite-env.d.ts
localization/: de.json  en.json
scripts/: deploy_public_stack.sh  migrate_files_to_db.py  verify_db_rbac.py
services/api/: Dockerfile  requirements.txt
sql/: 003_smtp_pending_notifications.sql  004_email_outbox.sql  005_worsening_signal_columns.sql  README.md
sql/bootstrap/: create_app_roles.sql
sql/migrations/: V10__api_account_deletion_grants.sql  V1__supabase_schema.sql  V2__alert_state_machine.sql  V6__outbox_sending_recovery.sql  V7__organizations_and_job_ownership.sql  V8__rbac_grants.sql  V9__admin_audit_and_membership_ops.sql
templates/email/: alert_body.html.j2  alert_body.txt.j2  alert_subject.txt.j2  state_update_body.txt.j2  (+2 more)
tests/: test_api_auth.py  test_api_authorization_integration.py  test_api_rate_limit.py  test_config.py  test_http_json_client.py  test_job_scheduler.py  test_main.py  test_outbox_dispatcher.py  test_pegelonline.py  test_provider_client.py  test_runtime_health.py  test_state_store.py  test_station_data_cache.py
(+59 files in other folders)
