[project]
name = "hochwasser-alert-service"
version = "0.1.0"
description = "Water level alert service for Pegelonline stations"
requires-python = ">=3.13"
dependencies = [
  "APScheduler==3.11.2",
  "docker==7.1.0",
  "jinja2==3.1.6",
  "matplotlib==3.10.8",
  "psycopg[binary]==3.2.10",
]

[dependency-groups]
dev = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "PyJWT[crypto]==2.10.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "ruff==0.15.2",
]

[tool.pytest.ini_options]
pythonpath = [".", "services/api/src"]
markers = [
  "integration: marks tests requiring a running Postgres database",
]

[tool.ruff]
target-version = "py313"
