[project]
name = "hochwasser-alert-service"
version = "0.1.0"
description = "Water level alert service for Pegelonline stations"
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary]==3.2.10",
]

[project.optional-dependencies]
alert = [
  "APScheduler==3.11.2",
  "docker==7.1.0",
  "jinja2==3.1.6",
  "matplotlib==3.10.8",
]
api = [
  "APScheduler==3.11.2",
  "fastapi==0.116.1",
  "PyJWT[crypto]==2.10.1",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "ruff==0.15.2",
]

[tool.pytest.ini_options]
pythonpath = [".", "services/api/src"]
markers = [
  "integration: marks tests requiring a running Postgres database",
]

[tool.ruff]
target-version = "py313"
